deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapp-deployment
  labels:
    app: mywebapp-app
spec:
  replicas: 3
  selector:
    matchLabels:
      project: mywebapp-proj
  template:
    metadata:
      labels:
        project: mywebapp-proj
    spec:
      containers:
        - name: mywebapp-cont
          image: truebad0ur/mywebapp:v5
          ports:
            - containerPort: 5000
